# prompt-eval-rubric

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/prompt_eval_rubric/: __init__.py
tests/: test_rubric.py
